version with spring data jpa